# segment-sandbox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  makefile  namespace.c  namespace.h  sandbox.c  sandbox.h  tools.c  tools.h
.github/workflows/: codeql-analysis.yml
config/: README.md  seccomp.list
include/: README.md  containerfs.h  sandbox.h  sandbox.hpp  tools.h
include/ssandbox/: cgroup.h  containerfs.h  global_config.h  limits.h  sandbox.h  semaphore.h  ssandbox.h  userns.h
include/ssandbox/limits/: resource.h  syscall.h
include/ssandbox/utils/: exceptions.h  listfile.h  process.h
sample/: runbash.cc  runshell.cc
src/: Makefile  containerfs.cc  global_config.cc  namespace.c  sandbox.c  sandbox.cc  semaphore.cc  tools.c  userns.cc
src/cgroup/: subsys.cc  unit.cc
src/container-fs/abstruct/: all.cc  config.cc  native.cc  procfs.cc  tmpfs.cc
src/container-fs/overlayfs/: mainfs.cc
src/container-fs/readonlyfs/: mount.cc  umount.cc
src/limits/: cpu.cc  info.cc  limits.cc  memory.cc  pids.cc  release.cc  time.cc  wait.cc
src/limits/resources/: freeze.cc  info.cc  limits.cc  pids.cc  release.cc  wait.cc
src/limits/syscall/: apply.cc  load.cc  make.cc  rule.cc
src/limits/utils/: process.cc
src/sandbox/: limits.cc  sandbox.cc
src/utils/: exceptions.cc  listfile.cc  process.cc
test/: runbash.c  runbash.cc  test.list  test_listname.cc
